# solapack

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.orig  get-config
example/: 2dsola.cfg  2dsola.small.cfg  buildtest.sh  efunc2d.cfg  runtest.sh  set-2drls.cfg  set-2drls.small.cfg  set2d.cfg
example/Splittings/: mt1.252_000.2d  mt1.252_000.2d.small
legacy_make/: buildall  configure  get-config  make.linux_gcc  make.linux_icc  make.sgi  make.sgi_mp  make.sun  make.sun_mp
modeldata/: amde.1  amdl.l5bi.d.15
src/: 2dolaIO.f  2dsola.lanczos.c  2dsola.main.lanczos.f  2dsola.n.include.f  2dsola.sub.lanczos.f  avker.f  byteswapIO.c  compat.c  covariance.f  dgemm_ovwr.f  diskmalloc.c  diskmalloc.h  dkronecker2.f  dlanc_b.f  elden.f  include1.f  include1.n.f  include2.f  kersub.n.f  maxsize.h  mgs.f  mgs.pentium.f  mgs.risc.f  miscsub.f  ofiles.f  parblas.f  plm.f  ran.f  set-2drls.nn.f  set2dker.nn.f  solaIO.f  splitsub.f  target.f  timer.c  timer.h
test/: run_small_test.sh
